fix: hide arrow behind the menu

--- a/simple-singolo/style.css
+++ b/simple-singolo/style.css
@@ -139,6 +139,8 @@ body {
 }
 .header__navigation {
   width: 40%;
+  /* height: 100vh;
+  z-index: -3; */
 }
 .navigation {
   display: flex;
@@ -154,6 +156,9 @@ body {
   text-transform: uppercase;
   color: var(--wite);
   margin: 0;
+/* 
+  position: relative;
+  z-index: 50; */
 }
 .navigation > .navigation__item {
   list-style: none;
@@ -720,14 +725,16 @@ body {
     position: absolute;
     top: 70px;
     left: -40px;
-    z-index: 1;
+    /* z-index: 1; */
     width: 278px;
     height: calc(100vh - 71px);
     display: flex;
     justify-content: flex-end;
     align-items: center;
     background-color: var(--dark-background);
-    z-index: 10;
+    /* position: relative;*/
+    height: calc(100vh - 59px);
+    z-index: 50; 
   }
   .header__navigation-hidden {
     display: none;
